--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="bg-slate-900 text-white shadow">
       <div class="max-w-6xl mx-auto px-4 py-5 flex flex-col gap-4 md:flex-row md:items-center md:justify-between">
         <div>
-          <h1 class="text-2xl font-bold tracking-tight">Cortinajes Manuel González – Catálogo FLASH ROLLER</h1>
+          <h1 class="text-2xl font-bold tracking-tight">Cortinajes Manuel González – Catálogo Cortinajes Manuel Gonzalez</h1>
           <p class="text-sm text-slate-300">Explora los diseños disponibles para cortinas roller, vinilos y empavonados.</p>
         </div>
         <nav class="flex flex-wrap gap-3 text-sm text-slate-200">
@@ -19,7 +19,6 @@
           <a href="#pattern-infantil" class="hover:text-amber-300 transition">Pattern Infantil</a>
           <a href="#empavonados" class="hover:text-amber-300 transition">Empavonados</a>
           <a href="#vinilos" class="hover:text-amber-300 transition">Vinilos</a>
-          <a href="#precios" class="hover:text-amber-300 transition">Lista de precios</a>
           <a href="#contacto" class="hover:text-amber-300 transition">Contacto</a>
         </nav>
       </div>
@@ -66,20 +65,11 @@
         <div id="galeria-vinilos" class="grid gap-4"></div>
       </section>
 
-      <section id="precios" class="space-y-5">
-        <div class="space-y-2">
-          <h2 class="text-3xl font-bold text-slate-900">Lista de precios</h2>
-          <p class="text-sm text-slate-600">Descarga la lista de precios vigente para compartir con tus clientes.</p>
-        </div>
-        <a id="enlace-precios" href="#" class="inline-flex items-center gap-2 px-4 py-2 text-sm font-semibold rounded-full bg-slate-900 text-white hover:bg-slate-800 transition disabled:opacity-50 disabled:cursor-not-allowed" target="_blank" rel="noopener">Descargar lista de precios (PDF)</a>
-        <p id="mensaje-precios" class="text-xs text-slate-500 hidden">No se encontró un archivo PDF en la raíz del repositorio. Actualiza el enlace manualmente si se agrega uno nuevo.</p>
-      </section>
-
       <section id="contacto" class="space-y-3">
         <h2 class="text-3xl font-bold text-slate-900">Contacto</h2>
-        <p class="text-sm text-slate-600">Cortinajes Manuel González<br />Osorno, Región de Los Lagos, Chile</p>
+        <p class="text-sm text-slate-600">Cortinajes Manuel González<br />Av Independencia 254, Santiago, Chile</p>
         <ul class="text-sm text-slate-600 space-y-1">
-          <li>WhatsApp: <a href="https://wa.me/569XXXXXXXX" class="text-amber-600 hover:text-amber-500 underline" target="_blank" rel="noopener">+56 9 XXXXXXXX</a></li>
+          <li>WhatsApp: <a href="https://wa.me/56976239221" class="text-amber-600 hover:text-amber-500 underline" target="_blank" rel="noopener">+56 9 XXXXXXXX</a></li>
           <li>Correo: <a href="mailto:cortinajesmanuelg@gmail.com" class="text-amber-600 hover:text-amber-500 underline">cortinajesmanuelg@gmail.com</a></li>
         </ul>
       </section>
@@ -88,7 +78,7 @@
     <footer class="bg-slate-900 text-slate-300 text-xs py-4">
       <div class="max-w-6xl mx-auto px-4 flex flex-col gap-1 sm:flex-row sm:items-center sm:justify-between">
         <span>© <span id="anio-actual"></span> Cortinajes Manuel González</span>
-        <span>Catálogo FLASH ROLLER · Uso comercial con clientes</span>
+        <span>Catálogo Cortinajes Manuel Gonzalez · Uso comercial con clientes</span>
       </div>
     </footer>
 
