--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cortinajes Manuel González – Catálogo FLASH ROLLER</title>
+    <title>Catálogo Cortinajes Manuel Gonzalez</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-slate-100 text-slate-800">
     <header class="bg-slate-900 text-white shadow">
       <div class="max-w-6xl mx-auto px-4 py-5 flex flex-col gap-4 md:flex-row md:items-center md:justify-between">
         <div>
-          <h1 class="text-2xl font-bold tracking-tight">Cortinajes Manuel González – Catálogo Cortinajes Manuel Gonzalez</h1>
+          <h1 class="text-2xl font-bold tracking-tight">Catálogo Cortinajes Manuel Gonzalez</h1>
           <p class="text-sm text-slate-300">Explora los diseños disponibles para cortinas roller, vinilos y empavonados.</p>
         </div>
         <nav class="flex flex-wrap gap-3 text-sm text-slate-200">
