--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <h2 class="text-3xl font-bold text-slate-900">Contacto</h2>
         <p class="text-sm text-slate-600">Cortinajes Manuel González<br />Av Independencia 254, Santiago, Chile</p>
         <ul class="text-sm text-slate-600 space-y-1">
-          <li>WhatsApp: <a href="https://wa.me/56976239221" class="text-amber-600 hover:text-amber-500 underline" target="_blank" rel="noopener">+56 9 XXXXXXXX</a></li>
-          <li>Correo: <a href="mailto:cortinajesmanuelg@gmail.com" class="text-amber-600 hover:text-amber-500 underline">cortinajesmanuelg@gmail.com</a></li>
+          <li>WhatsApp: <a href="https://wa.me/56976239221" class="text-amber-600 hover:text-amber-500 underline" target="_blank" rel="noopener">+56 9 7623 9221</a></li>
+          <li>Correo: <a href="mailto:cortinajesmanuelg@gmail.com" class="text-amber-600 hover:text-amber-500 underline">cortinajesmg@gmail.com</a></li>
         </ul>
       </section>
     </main>
